infra/k8s/components/istio/tenant-gateway/tenant-b/patch-namespace-istio-injection.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: genai-tenant-b
  labels:
    mon-agent/enabled: 'true'
    istio-injection: enabled
    localai.benchmark/traffic-access-mode: gateway-routed
